WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
175513
ARM_TRADITIONAL: static assertion failed: ProbeContext_size_matches_ctiMasmProbeTrampoline
https://bugs.webkit.org/show_bug.cgi?id=175513
Summary
ARM_TRADITIONAL: static assertion failed: ProbeContext_size_matches_ctiMasmPr...
Mark Lam
Reported
2017-08-12 10:34:40 PDT
See
https://bugs.webkit.org/show_bug.cgi?id=175446#c23
.
Attachments
Patch
(6.54 KB, patch)
2017-08-12 15:46 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2017-08-12 10:35:56 PDT
(In reply to Csaba Osztrogonác_OOO_until_21st_Aug from
comment #23
@
https://bugs.webkit.org/show_bug.cgi?id=175446#c23
)
> and it broke the ARMv7 (traditional) build too: > ../../Source/JavaScriptCore/assembler/MacroAssemblerARM.cpp:203:1: error: > static assertion failed: ProbeContext_size_matches_ctiMasmProbeTrampoline
@Ossy, I cannot fixed / diagnose this issue since I don't have the means to build for traditional ARM. This static_assert failure here is saying that sizeof(ProbeContext) is not our expected value, 208. Can you check what sizeof(ProbeContext) is on ARM_TRADITIONAL?
Csaba Osztrogonác
Comment 2
2017-08-12 14:53:43 PDT
(In reply to Mark Lam from
comment #1
)
> (In reply to Csaba Osztrogonác_OOO_until_21st_Aug from
comment #23
@ >
https://bugs.webkit.org/show_bug.cgi?id=175446#c23
) > > and it broke the ARMv7 (traditional) build too: > > ../../Source/JavaScriptCore/assembler/MacroAssemblerARM.cpp:203:1: error: > > static assertion failed: ProbeContext_size_matches_ctiMasmProbeTrampoline > > @Ossy, I cannot fixed / diagnose this issue since I don't have the means to > build for traditional ARM. This static_assert failure here is saying that > sizeof(ProbeContext) is not our expected value, 208. Can you check what > sizeof(ProbeContext) is on ARM_TRADITIONAL?
sizeof(ProbeContext) is 336. Where should I search the root of this issue?
Csaba Osztrogonác
Comment 3
2017-08-12 15:11:22 PDT
(In reply to Csaba Osztrogonác_OOO_until_21st_Aug from
comment #2
)
> (In reply to Mark Lam from
comment #1
) > > (In reply to Csaba Osztrogonác_OOO_until_21st_Aug from
comment #23
@ > >
https://bugs.webkit.org/show_bug.cgi?id=175446#c23
) > > > and it broke the ARMv7 (traditional) build too: > > > ../../Source/JavaScriptCore/assembler/MacroAssemblerARM.cpp:203:1: error: > > > static assertion failed: ProbeContext_size_matches_ctiMasmProbeTrampoline > > > > @Ossy, I cannot fixed / diagnose this issue since I don't have the means to > > build for traditional ARM. This static_assert failure here is saying that > > sizeof(ProbeContext) is not our expected value, 208. Can you check what > > sizeof(ProbeContext) is on ARM_TRADITIONAL? > > sizeof(ProbeContext) is 336. Where should I search the root of this issue?
I think I got the root of the problem. There are 32 FP registers, but only d0-d15 are saved, that's why sizeof(ProbeContext) is 336, not 208.
Csaba Osztrogonác
Comment 4
2017-08-12 15:23:07 PDT
fix is coming
Csaba Osztrogonác
Comment 5
2017-08-12 15:46:55 PDT
Created
attachment 318002
[details]
Patch build works, tests are still running
Mark Lam
Comment 6
2017-08-12 16:47:37 PDT
Comment on
attachment 318002
[details]
Patch r=me
Csaba Osztrogonác
Comment 7
2017-08-12 22:53:40 PDT
Comment on
attachment 318002
[details]
Patch Tests pass, let's land it.
WebKit Commit Bot
Comment 8
2017-08-12 23:22:47 PDT
Comment on
attachment 318002
[details]
Patch Clearing flags on attachment: 318002 Committed
r220629
: <
http://trac.webkit.org/changeset/220629
>
WebKit Commit Bot
Comment 9
2017-08-12 23:22:48 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 10
2017-08-12 23:23:53 PDT
<
rdar://problem/33866212
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug